# armoury

./: .gitignore  README.md
window-interface/: README.md
window-interface/demo/: README.md  pubspec.yaml
window-interface/demo/lib/: main.dart
window-interface/demo/windows/: .gitignore  CMakeLists.txt
window-interface/plugin/: CHANGELOG.md  README.md  pubspec.yaml
window-interface/plugin/lib/: window_interface.dart  window_placement.dart
window-interface/plugin/windows/: CMakeLists.txt  window_interface_plugin.cpp  window_placement.cpp
xinlake-platform/demo/: README.md  pubspec.yaml
xinlake-platform/demo/android/: settings.gradle
xinlake-platform/demo/lib/: main.dart
xinlake-platform/demo/windows/: CMakeLists.txt
xinlake-platform/plugin/: CHANGELOG.md  README.md  pubspec.yaml
xinlake-platform/plugin/android/: build.gradle
xinlake-platform/plugin/lib/: xinlake_platform.dart
xinlake-platform/plugin/windows/: CMakeLists.txt  application.cpp  file_dialog.cpp  utils.cpp  utils.h  (+1 more)
xinlake-qrcode/: Xinlake-QRCode.code-workspace
xinlake-qrcode/demo/: README.md  pubspec.yaml
xinlake-qrcode/plugin/: CHANGELOG.md  README.md  pubspec.yaml
xinlake-qrcode/plugin/windows/: CMakeLists.txt  xinlake_qrcode_plugin.cpp  zxing_decode.cpp
xinlake-qrcode/plugin/windows/include/xinlake_qrcode/: xinlake_qrcode_plugin.h
xinlake-responsive/demo/: README.md  pubspec.yaml
xinlake-responsive/plugin/: CHANGELOG.md  README.md  pubspec.yaml
xinlake-text/demo/: README.md  pubspec.yaml
xinlake-text/plugin/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
(+62 files in other folders)
